overflow fix

--- a/src/pages/css/panel.css
+++ b/src/pages/css/panel.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #fff;
+}
+
 .painel-item.active{
     color: var(--pink);
 }
